# ai-weather-agent

./: .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  pytest-watch.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/ai_weather_agent/: __main__.py  ai_weather_agent.py  ai_weather_cli.py  ai_weather_utils.py
src/ai_weather_agent/tools/: __init__.py  ai_weather_tools.py
src/ai_wheather_agent/: __init__.py  cli.py  weather.py
tests/: __init__.py  conftest.py  test_ai_weather_agent.py  test_ai_weather_utils.py  test_ai_wheather_agent.py  test_weather_agent.py
training/: README.md  SESSION_CONTEXT.md  context.md  current-training.md  module-1.md  module-2.md  module-3.md  module-4.md  training-topics.md
