[project]
name = "ai-wheather-agent"
version = "0.1.0"
description = "AI weather agent"
readme = "README.md"
authors = [
  {name = "Marcelo Juca", email = "marcelojuca@gmail.com"}
]
maintainers = [
  {name = "Marcelo Juca", email = "marcelojuca@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "langchain-openai>=1.0.2",
  "langgraph>=1.0.2",
  "langwatch-scenario>=0.7.14",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.3",
  "typer",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/marcelojuca/ai_wheather_agent/issues"
changelog = "https://github.com/marcelojuca/ai_wheather_agent/blob/master/changelog.md"
homepage = "https://github.com/marcelojuca/ai_wheather_agent"

[project.scripts]
ai_wheather_agent = "ai_wheather_agent.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
